--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,1 +1,5 @@
-<p>books works!</p>
+<ul *ngFor="let book of books">
+  <li>
+    <a routerLink="/books/{{ book.id }}">{{ book.title }}</a>
+  </li>
+</ul>
