--- a/src/app/books/details-book/details-book.component.html
+++ b/src/app/books/details-book/details-book.component.html
@@ -1,1 +1,6 @@
-<p>details-book works!</p>
+<div *ngIf="book" class="card">
+  <p>{{ book.title }}</p>
+  <p>{{ book.author }}</p>
+  <p>{{ book.pages }}</p>
+</div>
+<button type="button" (click)="back()" class="btn btn-primary">Back</button>
