--- a/src/app/genres/genre.component.html
+++ b/src/app/genres/genre.component.html
@@ -1,1 +1,7 @@
-<p>genre works!</p>
+<div>
+  <ul class="list-group" *ngFor="let genre of genres">
+    <li class="list-group-item">
+      <a>{{ genre.name }}</a>
+    </li>
+  </ul>
+</div>
