--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,10 @@
-<div class="quote text-center">404 not found</div>
+<div class="text-center">
+  <figure class="figure">
+    <img
+      src="/assets/images/error.jpg"
+      class="figure-img img-fluid rounded"
+      alt="error 404"
+    />
+    <figcaption class="figure-caption">404 not found</figcaption>
+  </figure>
+</div>
