--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -31,6 +31,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="genres">Genres</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="genress">404</a>
+        </li>
       </ul>
     </div>
   </div>
