add and edit book

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -26,6 +26,9 @@
           <a class="nav-link" routerLink="books/0/edit">Add Book</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="books/1/edit">Edit Book</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="books/1">Book 1</a>
         </li>
         <li class="nav-item">
