--- a/src/app/books/edit-book/edit-book.component.html
+++ b/src/app/books/edit-book/edit-book.component.html
@@ -1,1 +1,38 @@
-<p>edit-book works!</p>
+<h1>{{ pageTitle }}</h1>
+{{ book | json }}
+<form class="mt-3" #bookForm="ngForm" *ngIf="book" (ngSubmit)="saveBook()">
+  <div class="mb-3">
+    <label for="title" class="form-label" name="title">Title</label>
+    <input
+      type="text"
+      class="form-control"
+      id="title"
+      name="title"
+      required
+      [(ngModel)]="book.title"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="author" class="form-label" name="author">Author</label>
+    <input
+      type="text"
+      class="form-control"
+      id="author"
+      name="author"
+      required
+      [(ngModel)]="book.author"
+    />
+  </div>
+  <div class="mb-3">
+    <label class="form-label" for="pages" name="pages">Pages</label>
+    <input
+      type="number"
+      class="form-control"
+      id="pages"
+      name="pages"
+      required
+      [(ngModel)]="book.pages"
+    />
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
