add mock genre; add and edit genre

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,5 +1,6 @@
 <ul *ngFor="let book of books">
   <li>
     <a routerLink="/books/{{ book.id }}">{{ book.title }}</a>
+    <span>{{ book.genreId }}</span>
   </li>
 </ul>
