--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -35,6 +35,15 @@
           <a class="nav-link" routerLink="genres">Genres</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="genres/0/edit">Add Genre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="genres/1/edit">Edit Genre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="genres/1">Genre 1</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="genress">404</a>
         </li>
       </ul>
